# jafx

./: .gitignore  .pre-commit-config.yaml  README.md  flake.nix  pyproject.toml
jafx/: __init__.py  default.py  global_step.py  handler.py  hparams.py  intercept.py  io.py  namespace.py  params.py  prng.py  state.py  transforms.py  util.py
jafx/contrib/: __init__.py  flax.py  haiku.py
jafx/contrib/logging/: __init__.py  logging.py  text_logger.py
jafx/contrib/logging/array_logger/: __init__.py  array_logger.py  jaxboard.py
jafx/nn/: __init__.py  activation.py  normalization.py  primitives.py
scripts/: sync_version.py
tests/: test_functional.py  test_transforms.py
