[tool.poetry]
name = "jafx"
version = "0.1.0"
description = "Composable deep learning with effectful JAX primitives"
authors = []

[tool.poetry.dependencies]
python = "^3.9"
cattrs = "^1.9.0"
ansicolors = "^1.1.8"
matplotlib = "^3.5.1"
dm-haiku = {version = "^0.0.6", optional = true}
flax = {version = "^0.5.0", optional = true}
moviepy = {version = "^1.0.3", optional = true}
tensorboard = {version = "^2.9.0", optional = true}

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
pytest = "^6.2.5"
black = "^22.3.0"
isort = "^5.9.3"

[tool.poetry.extras]
haiku = ["dm-haiku"]
flax = ["flax"]
logging = ["moviepy", "tensorboard"]

[tool.isort]
profile = "black"
multi_line_output = 3
skip = "__init__.py"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
